2008-01-05 akira yamada <akira at arika.org>
	* highlight.rb: escape backslash in diary title and delete white space from tail
	of subtitle.

2008-01-03 OGAWA KenIchi <kenichi at ice.email.ne.jp>
	* category.rb: remove over escapes from categories.
	* */category.rb: remove character entity reference from navigation default.

2007-12-16 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.0.

2007-12-10 zunda <zunda at freeshell.org>
	* disp_referrer.rb: modified to allow to write keys for seach word (String)
	and recursive URL (Symbol) in an Array
	* ja/disp_referrer.rb: added translation URLs from Google

2007-12-10 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added search engines from chew, wordtantei,
	sfa-cms, hatena, Live Search. Modified search engines from Yahoo and
	Infoseek. Thank you, knu

2007-12-10 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added require 'uri' to test code

2007-12-07 zunda <zunda at freeshell.org>
	* disp_referrer.rb: modified to recursively convert URL in query
	with keyword specified with a Symbol
	* disp_referrer.rb: refactored parse_as_search()
	* ja/disp_referrer.rb: modified an entry of DispReferrer2_Engines
	accordingly
	* ja/disp_referrer.rb: add an option to extensive test. Provide path
	to .tdr files to the command line
	* en/disp_referrer.rb, zh/disp_referrer.rb: added a comment for
	specifing recuseive conversion

2007-12-06 zunda <zunda at freeshell.org>
	* disp_referrer.rb, ja/disp_referrer.rb: applied patch at
	http://d.akinori.org/?date=20070704#p01 by Akinori MUSHA
	<akinori:at:musha:dot:org>. Thank you. Please note that I am
	thinking of chaging the notation from prev>q to {'prev' => 'q'}
	or something simpler.
	* ja/disp_referrer.rb: added a test case for recursive conversion

2007-12-06 zunda <zunda at freeshell.org>
	* ??/disp_referrer.rb: added label tags to radio buttons and check boxes

2007-12-05 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added support for unit test
